--- a/userChrome.css
+++ b/userChrome.css
@@ -5,13 +5,19 @@
   opacity: 0;
   pointer-events: none;
 }
+
 #main-window:not([tabsintitlebar="true"]) #TabsToolbar {
   visibility: collapse !important;
 }
 
-/* Hide the "Tree Style Tab" header at the top of the sidebar */
-#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header {
+/* Hide the "Tree Style Tab" and "Sidebery" header at the top of the sidebar */
+#sidebar-box[sidebarcommand="treestyletab_piro_sakura_ne_jp-sidebar-action"] #sidebar-header,
+#sidebar-box[sidebarcommand="_3c078156-979c-498b-8990-85f7987dd929_-sidebar-action"] #sidebar-header {
   display: none;
+}
+
+#navigator-toolbox {
+    border: none !important;
 }
 
 #navigator-toolbox::after {
@@ -24,4 +30,26 @@
   width: 3px !important;
   background-color: #323234 !important;
   border: none !important;
+}
+
+/* Compute new position, width, and padding */
+#urlbar[breakout][breakout-extend] {
+  top: 5px !important;
+  left: 0px !important;
+  width: 100% !important;
+  padding: 0px !important;
+}
+[uidensity="compact"] #urlbar[breakout][breakout-extend] {
+  top: 3px !important;
+}
+
+/* Prevent shift of URL bar contents */
+#urlbar[breakout][breakout-extend] > #urlbar-input-container {
+  height: var(--urlbar-height) !important;
+  padding: 0 !important;
+}
+
+#urlbar[breakout][breakout-extend] > #urlbar-background {
+  animation: none !important;;
+  box-shadow: none !important;
 }
